@@ -31,6 +31,8 @@ import org.apache.flink.table.data.StringData;
 import org.apache.flink.table.functions.BuiltInFunctionDefinitions;
 import org.apache.flink.table.functions.ScalarFunction;
 import org.apache.flink.types.Row;
+import org.apache.flink.types.variant.BinaryVariantInternalBuilder;
+import org.apache.flink.types.variant.Variant;
 
 import org.apache.commons.io.IOUtils;
 
@@ -41,6 +43,7 @@ import java.nio.charset.StandardCharsets;
 import java.time.Instant;
 import java.time.LocalDateTime;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
@@ -50,6 +53,7 @@ import java.util.stream.Stream;
 import static org.apache.flink.table.api.DataTypes.ARRAY;
 import static org.apache.flink.table.api.DataTypes.BINARY;
 import static org.apache.flink.table.api.DataTypes.BOOLEAN;
+import static org.apache.flink.table.api.DataTypes.BYTES;
 import static org.apache.flink.table.api.DataTypes.DECIMAL;
 import static org.apache.flink.table.api.DataTypes.DOUBLE;
 import static org.apache.flink.table.api.DataTypes.FIELD;
@@ -60,6 +64,7 @@ import static org.apache.flink.table.api.DataTypes.STRING;
 import static org.apache.flink.table.api.DataTypes.TIMESTAMP;
 import static org.apache.flink.table.api.DataTypes.TIMESTAMP_WITH_LOCAL_TIME_ZONE;
 import static org.apache.flink.table.api.DataTypes.VARBINARY;
+import static org.apache.flink.table.api.DataTypes.VARIANT;
 import static org.apache.flink.table.api.Expressions.$;
 import static org.apache.flink.table.api.Expressions.call;
 import static org.apache.flink.table.api.Expressions.json;
@@ -84,6 +89,7 @@ class JsonFunctionsITCase extends BuiltInFunctionTestBase {
         final List<TestSetSpec> testCases = new ArrayList<>();
         testCases.add(jsonExistsSpec());
         testCases.add(jsonValueSpec());
+        testCases.add(jsonLengthSpec());
         testCases.addAll(isJsonSpec());
         testCases.addAll(jsonQuerySpec());
         testCases.addAll(jsonStringSpec());
@@ -91,11 +97,235 @@ class JsonFunctionsITCase extends BuiltInFunctionTestBase {
         testCases.addAll(jsonObjectSpec());
         testCases.addAll(jsonSpec());
         testCases.addAll(jsonArraySpec());
+        testCases.addAll(jsonTypeSpec());
         testCases.addAll(jsonQuoteSpec());
         testCases.addAll(jsonUnquoteSpecWithValidInput());
         testCases.addAll(jsonUnquoteSpecWithInvalidInput());
         testCases.addAll(jsonLocalRefReuseSpec());
         return testCases.stream();
+    }
+
+    private static TestSetSpec jsonLengthSpec() {
+        final String jsonValue = getJsonFromResource("/json/json-exists.json");
+
+        return TestSetSpec.forFunction(BuiltInFunctionDefinitions.JSON_LENGTH)
+                .onFieldsWithData(
+                        jsonValue,
+                        "{\"a\":1,\"b\":2}",
+                        "[1,2,3]",
+                        "\"abc\"",
+                        "null",
+                        "{",
+                        ((String) null),
+                        "$",
+                        "{\"a\":[true, false, null]}",
+                        "{}",
+                        "[]")
+                .andDataTypes(
+                        STRING(), STRING(), STRING(), STRING(), STRING(), STRING(), STRING(),
+                        STRING(), STRING(), STRING(), STRING())
+                // path exists but resolves to a JSON null literal -> scalar, length 1
+                .testResult(
+                        $("f8").jsonLength("$.a[2]"),
+                        "JSON_LENGTH(f8, '$.a[2]')",
+                        1,
+                        INT().nullable())
+                // missing paths on the same document -> NULL
+                .testResult(
+                        $("f8").jsonLength("$.a[9]"),
+                        "JSON_LENGTH(f8, '$.a[9]')",
+                        null,
+                        INT().nullable())
+                .testResult(
+                        $("f8").jsonLength("$.b"), "JSON_LENGTH(f8, '$.b')", null, INT().nullable())
+
+                // whole document is a JSON null literal: the root path matches it as a scalar,
+                // anything else does not exist
+                .testResult($("f4").jsonLength("$"), "JSON_LENGTH(f4, '$')", 1, INT().nullable())
+                .testResult(
+                        $("f4").jsonLength("$.a"), "JSON_LENGTH(f4, '$.a')", null, INT().nullable())
+                .testResult(
+                        $("f4").jsonLength("$[0]"),
+                        "JSON_LENGTH(f4, '$[0]')",
+                        null,
+                        INT().nullable())
+                .testResult(
+                        $("f4").jsonLength("$.*"), "JSON_LENGTH(f4, '$.*')", null, INT().nullable())
+
+                // malformed, blank and empty paths -> NULL
+                .testResult(
+                        $("f8").jsonLength("$["), "JSON_LENGTH(f8, '$[')", null, INT().nullable())
+                .testResult(
+                        $("f8").jsonLength("$.[]"),
+                        "JSON_LENGTH(f8, '$.[]')",
+                        null,
+                        INT().nullable())
+                .testResult(
+                        $("f8").jsonLength("   "), "JSON_LENGTH(f8, '   ')", null, INT().nullable())
+                .testResult($("f8").jsonLength(""), "JSON_LENGTH(f8, '')", null, INT().nullable())
+
+                // the root path on a scalar document behaves like the no-path overload
+                .testResult($("f3").jsonLength("$"), "JSON_LENGTH(f3, '$')", 1, INT().nullable())
+
+                // SQL NULL input
+                .testResult($("f6").jsonLength(), "JSON_LENGTH(f6)", null, INT().nullable())
+
+                // whole-document length from the existing resource:
+                .testResult($("f0").jsonLength(), "JSON_LENGTH(f0)", 3, INT().nullable())
+
+                // basic shapes
+                .testResult($("f1").jsonLength(), "JSON_LENGTH(f1)", 2, INT().nullable())
+                .testResult($("f2").jsonLength(), "JSON_LENGTH(f2)", 3, INT().nullable())
+                .testResult($("f3").jsonLength(), "JSON_LENGTH(f3)", 1, INT().nullable())
+
+                // empty containers -> 0
+                .testResult($("f9").jsonLength(), "JSON_LENGTH(f9)", 0, INT().nullable())
+                .testResult($("f10").jsonLength(), "JSON_LENGTH(f10)", 0, INT().nullable())
+                .testResult($("f9").jsonLength("$"), "JSON_LENGTH(f9, '$')", 0, INT().nullable())
+                .testResult($("f10").jsonLength("$"), "JSON_LENGTH(f10, '$')", 0, INT().nullable())
+                .testResult($("f4").jsonLength(), "JSON_LENGTH(f4)", 1, INT().nullable())
+
+                // (valid) paths
+                .testResult($("f0").jsonLength("$"), "JSON_LENGTH(f0, '$')", 3, INT().nullable())
+                .testResult(
+                        $("f0").jsonLength("$.type"),
+                        "JSON_LENGTH(f0, '$.type')",
+                        1,
+                        INT().nullable())
+                .testResult(
+                        $("f0").jsonLength("$.author"),
+                        "JSON_LENGTH(f0, '$.author')",
+                        2,
+                        INT().nullable())
+                .testResult(
+                        $("f0").jsonLength("$.author.address"),
+                        "JSON_LENGTH(f0, '$.author.address')",
+                        2,
+                        INT().nullable())
+                .testResult(
+                        $("f0").jsonLength("$.metadata.tags"),
+                        "JSON_LENGTH(f0, '$.metadata.tags')",
+                        3,
+                        INT().nullable())
+                .testResult(
+                        $("f0").jsonLength("$.metadata.references"),
+                        "JSON_LENGTH(f0, '$.metadata.references')",
+                        1,
+                        INT().nullable())
+                .testResult(
+                        $("f0").jsonLength("$.metadata.references[0]"),
+                        "JSON_LENGTH(f0, '$.metadata.references[0]')",
+                        2,
+                        INT().nullable())
+                .testResult(
+                        $("f0").jsonLength("$.metadata.references[0].url"),
+                        "JSON_LENGTH(f0, '$.metadata.references[0].url')",
+                        1,
+                        INT().nullable())
+                // (invalid) path
+                .testResult(
+                        $("f0").jsonLength("$.missing"),
+                        "JSON_LENGTH(f0, '$.missing')",
+                        null,
+                        INT().nullable())
+                .testResult($("f7").jsonLength(), "JSON_LENGTH(f7)", null, INT().nullable())
+
+                // invalid JSON -> NULL
+                .testResult($("f5").jsonLength(), "JSON_LENGTH(f5)", null, INT().nullable())
+
+                // literal (NOT NULL) arguments must still yield a nullable result
+                .testResult(
+                        lit("{\"a\":[1,2,3]}").jsonLength("$.b"),
+                        "JSON_LENGTH('{\"a\":[1,2,3]}', '$.b')",
+                        null,
+                        INT().nullable())
+                .testResult(
+                        lit("{\"a\":[1,2,3]}").jsonLength("$.a"),
+                        "JSON_LENGTH('{\"a\":[1,2,3]}', '$.a')",
+                        3,
+                        INT().nullable())
+
+                // missing path: neither mode throws -> both yield NULL
+                .testResult(
+                        $("f0").jsonLength("$.author.nope"),
+                        "JSON_LENGTH(f0, '$.author.nope')",
+                        null,
+                        INT().nullable())
+
+                // WILDCARDS matching MULTIPLE nodes -> NULL
+                // PARSE_JSON has no Table API equivalent, so this stays SQL-only
+                .testSqlResult("JSON_LENGTH(PARSE_JSON(f0), '$.*')", null, INT().nullable())
+                .testResult(
+                        $("f0").jsonLength("$.*"), "JSON_LENGTH(f0, '$.*')", null, INT().nullable())
+                .testResult(
+                        $("f0").jsonLength("$.author.*"),
+                        "JSON_LENGTH(f0, '$.author.*')",
+                        null,
+                        INT().nullable())
+                .testResult(
+                        $("f0").jsonLength("$.author.address.*"),
+                        "JSON_LENGTH(f0, '$.author.address.*')",
+                        null,
+                        INT().nullable())
+                .testResult(
+                        $("f0").jsonLength("$.metadata.tags[*]"),
+                        "JSON_LENGTH(f0, '$.metadata.tags[*]')",
+                        null,
+                        INT().nullable())
+                .testResult(
+                        $("f0").jsonLength("$..name"),
+                        "JSON_LENGTH(f0, '$..name')",
+                        null,
+                        INT().nullable())
+
+                // deep-scan `$..url` -> single scalar
+                .testResult(
+                        $("f0").jsonLength("$..url"),
+                        "JSON_LENGTH(f0, '$..url')",
+                        1,
+                        INT().nullable())
+                .testResult(
+                        $("f0").jsonLength("$..address"),
+                        "JSON_LENGTH(f0, '$..address')",
+                        2,
+                        INT().nullable())
+                .testResult(
+                        $("f0").jsonLength("$.metadata.references[*]"),
+                        "JSON_LENGTH(f0, '$.metadata.references[*]')",
+                        2,
+                        INT().nullable())
+                // `$.metadata.references[*].name` -> single scalar)
+                .testResult(
+                        $("f0").jsonLength("$.metadata.references[*].name"),
+                        "JSON_LENGTH(f0, '$.metadata.references[*].name')",
+                        1,
+                        INT().nullable())
+                // JSON_LENGTH variant support (runtime path, no constant folding)
+                // PARSE_JSON has no Table API equivalent, so these stay SQL-only
+                .testSqlResult("JSON_LENGTH(PARSE_JSON(f0))", 3, INT().nullable())
+                .testSqlResult("JSON_LENGTH(PARSE_JSON('[1,2,3,4,5]'))", 5, INT().nullable())
+                .testSqlResult("JSON_LENGTH(PARSE_JSON('\"hello\"'))", 1, INT().nullable())
+                .testSqlResult(
+                        "JSON_LENGTH(PARSE_JSON(f0), '$.metadata.tags')", 3, INT().nullable())
+                .testResult(
+                        $("f0").jsonLength("$.items[*]"),
+                        "JSON_LENGTH(f0, '$.items[*]')",
+                        null,
+                        INT().nullable())
+
+                // lax/strict path modes are not supported and are rejected at runtime
+                .testSqlRuntimeError(
+                        "JSON_LENGTH(f0, 'strict $.type')",
+                        TableRuntimeException.class,
+                        "JSON_LENGTH does not support the 'lax'/'strict' path mode prefix (got: 'strict $.type').")
+                .testSqlRuntimeError(
+                        "JSON_LENGTH(f0, 'lax $.type')",
+                        TableRuntimeException.class,
+                        "JSON_LENGTH does not support the 'lax'/'strict' path mode prefix (got: 'lax $.type').")
+                .testTableApiRuntimeError(
+                        $("f0").jsonLength("strict $.type"),
+                        TableRuntimeException.class,
+                        "JSON_LENGTH does not support the 'lax'/'strict' path mode prefix (got: 'strict $.type').");
     }
 
     private static TestSetSpec jsonExistsSpec() {
@@ -175,14 +405,17 @@ class JsonFunctionsITCase extends BuiltInFunctionTestBase {
                 .testTableApiRuntimeError(
                         $("f0").jsonExists("strict $.invalid", JsonExistsOnError.ERROR),
                         TableRuntimeException.class,
-                        "No results for path: $['invalid']");
+                        "No results for path: $['invalid']")
+                .testSqlResult("JSON_EXISTS(f0, '$.items[*]')", false, BOOLEAN())
+                .testSqlResult("JSON_EXISTS(f0, '$.metadata.tags[*]')", true, BOOLEAN());
     }
 
     private static TestSetSpec jsonValueSpec() {
         final String jsonValue = getJsonFromResource("/json/json-value.json");
         return TestSetSpec.forFunction(BuiltInFunctionDefinitions.JSON_VALUE)
-                .onFieldsWithData(jsonValue)
-                .andDataTypes(STRING())
+                .onFieldsWithData(
+                        jsonValue, jsonValue.getBytes(StandardCharsets.UTF_8), Row.of(jsonValue))
+                .andDataTypes(STRING(), BYTES(), ROW(FIELD("json", STRING())))
 
                 // NULL and invalid types
                 .testResult(
@@ -299,7 +532,14 @@ class JsonFunctionsITCase extends BuiltInFunctionTestBase {
                 .testSqlResult(
                         "JSON_VALUE(f0, '$.type'), JSON_VALUE(f0, '$.age')",
                         List.of("account", "42"),
-                        List.of(STRING(), STRING()));
+                        List.of(STRING(), STRING()))
+                .testSqlResult(
+                        "JSON_VALUE(f1, '$.type'), "
+                                + "JSON_VALUE(f2, '$.type'), "
+                                + "JSON_VALUE(CAST(NULL AS INT), '$.type'), "
+                                + "JSON_VALUE(CAST(NULL AS DATE), '$.type')",
+                        Arrays.asList(null, null, null, null),
+                        List.of(STRING(), STRING(), STRING(), STRING()));
     }
 
     private static List<TestSetSpec> isJsonSpec() {
@@ -797,7 +1037,31 @@ class JsonFunctionsITCase extends BuiltInFunctionTestBase {
                                 jsonString(call("TRY_PARSE_JSON", $("f1"))),
                                 "JSON_STRING(TRY_PARSE_JSON(f1))",
                                 null,
-                                STRING()));
+                                STRING()),
+                TestSetSpec.forFunction(
+                                BuiltInFunctionDefinitions.PARSE_JSON,
+                                "VARIANT expression preceding another expression in a"
+                                        + " constant-folded projection")
+                        .onFieldsWithData("{\"a\": 1}")
+                        .andDataTypes(STRING().notNull())
+                        .withConstantFoldingEnabled()
+                        .testResult(
+                                resultSpec(
+                                        call("PARSE_JSON", $("f0")),
+                                        "PARSE_JSON(f0)",
+                                        getVariantForJson("{\"a\": 1}"),
+                                        VARIANT().notNull(),
+                                        VARIANT().notNull()),
+                                resultSpec(
+                                        jsonString(call("PARSE_JSON", $("f0"))),
+                                        "JSON_STRING(PARSE_JSON(f0))",
+                                        "{\"a\":1}",
+                                        STRING().notNull(),
+                                        STRING().notNull()))
+                        .testSqlResult(
+                                "PARSE_JSON(f0), JSON_STRING(PARSE_JSON(f0))",
+                                List.of(getVariantForJson("{\"a\": 1}"), "{\"a\":1}"),
+                                List.of(VARIANT().notNull(), STRING().notNull())));
     }
 
     private static List<TestSetSpec> jsonSpec() {
@@ -1185,6 +1449,155 @@ class JsonFunctionsITCase extends BuiltInFunctionTestBase {
                                 "JSON_OBJECT(KEY 'testRow' VALUE f0 NULL ON NULL)",
                                 "{\"testRow\":{\"field\\ttab\":\"val4\",\"field\\nline\":\"val3\",\"field\\rreturn\":\"val5\",\"field\\\"quote\":\"val1\",\"field\\\\slash\":\"val2\"}}",
                                 STRING().notNull()));
+    }
+
+    private static List<TestSetSpec> jsonTypeSpec() {
+        return List.of(
+                // One flag per JSON type.
+                TestSetSpec.forFunction(BuiltInFunctionDefinitions.JSON_TYPE)
+                        .onFieldsWithData(
+                                "{\"a\": true}", "[1, 2]", "true", "\"Hello, World!\"", "66")
+                        .andDataTypes(STRING(), STRING(), STRING(), STRING(), STRING())
+                        .testResult(
+                                $("f0").jsonType(), "JSON_TYPE(f0)", "object", STRING().nullable())
+                        .testResult(
+                                $("f1").jsonType(), "JSON_TYPE(f1)", "array", STRING().nullable())
+                        .testResult(
+                                $("f2").jsonType(), "JSON_TYPE(f2)", "boolean", STRING().nullable())
+                        .testResult(
+                                $("f3").jsonType(), "JSON_TYPE(f3)", "string", STRING().nullable())
+                        .testResult(
+                                $("f4").jsonType(), "JSON_TYPE(f4)", "number", STRING().nullable()),
+
+                // The flag follows the JSON grammar alone: a number has no width, and a quoted
+                // value is a string whatever it spells.
+                TestSetSpec.forFunction(BuiltInFunctionDefinitions.JSON_TYPE)
+                        .onFieldsWithData(
+                                "11.1", "99999999999999999999", "\"2015-01-01\"", "\"66\"")
+                        .andDataTypes(STRING(), STRING(), STRING(), STRING())
+                        .testResult(
+                                $("f0").jsonType(), "JSON_TYPE(f0)", "number", STRING().nullable())
+                        .testResult(
+                                $("f1").jsonType(), "JSON_TYPE(f1)", "number", STRING().nullable())
+                        .testResult(
+                                $("f2").jsonType(), "JSON_TYPE(f2)", "string", STRING().nullable())
+                        .testResult(
+                                $("f3").jsonType(), "JSON_TYPE(f3)", "string", STRING().nullable()),
+
+                // A SQL NULL input and invalid JSON both yield SQL NULL; the JSON null literal
+                // returns the string 'null'.
+                TestSetSpec.forFunction(BuiltInFunctionDefinitions.JSON_TYPE)
+                        .onFieldsWithData("68s", "null")
+                        .andDataTypes(STRING(), STRING())
+                        .testResult(
+                                nullOf(STRING()).jsonType(),
+                                "JSON_TYPE(CAST(NULL AS STRING))",
+                                null,
+                                STRING().nullable())
+                        .testResult($("f0").jsonType(), "JSON_TYPE(f0)", null, STRING().nullable())
+                        .testResult(
+                                $("f1").jsonType(), "JSON_TYPE(f1)", "null", STRING().nullable())
+                        .testResult(
+                                $("f1").jsonType("$"),
+                                "JSON_TYPE(f1, '$')",
+                                "null",
+                                STRING().nullable())
+                        .testResult(
+                                $("f1").jsonType("$.a"),
+                                "JSON_TYPE(f1, '$.a')",
+                                null,
+                                STRING().nullable()),
+
+                // A path reads the type at that location instead of the root, and yields NULL
+                // unless it resolves to exactly one value. A wildcard path is indefinite: it reads
+                // back as a list, so it has a type only for a single match.
+                TestSetSpec.forFunction(BuiltInFunctionDefinitions.JSON_TYPE)
+                        .onFieldsWithData("{\"a\": [1, 2]}", "{\"a\": [1]}")
+                        .andDataTypes(STRING(), STRING())
+                        .testResult(
+                                $("f0").jsonType("$.a"),
+                                "JSON_TYPE(f0, '$.a')",
+                                "array",
+                                STRING().nullable())
+                        .testResult(
+                                $("f0").jsonType("$.a[0]"),
+                                "JSON_TYPE(f0, '$.a[0]')",
+                                "number",
+                                STRING().nullable())
+                        .testResult(
+                                $("f0").jsonType("$.b"),
+                                "JSON_TYPE(f0, '$.b')",
+                                null,
+                                STRING().nullable())
+                        .testResult(
+                                $("f0").jsonType("$.["),
+                                "JSON_TYPE(f0, '$.[')",
+                                null,
+                                STRING().nullable())
+                        .testResult(
+                                $("f0").jsonType(""),
+                                "JSON_TYPE(f0, '')",
+                                null,
+                                STRING().nullable())
+                        .testResult(
+                                $("f0").jsonType("$.a[*]"),
+                                "JSON_TYPE(f0, '$.a[*]')",
+                                null,
+                                STRING().nullable())
+                        .testResult(
+                                $("f1").jsonType("$.a[*]"),
+                                "JSON_TYPE(f1, '$.a[*]')",
+                                "number",
+                                STRING().nullable()),
+
+                // The 'lax'/'strict' path mode prefix is rejected at planning time, but a field of
+                // that name is addressed like any other.
+                TestSetSpec.forFunction(BuiltInFunctionDefinitions.JSON_TYPE)
+                        .onFieldsWithData(
+                                "{\"a\": 1}", "{\"lax\": {\"strict\": 2}, \"strict value\": 1}")
+                        .andDataTypes(STRING(), STRING())
+                        .testSqlValidationError(
+                                "JSON_TYPE(f0, 'lax $.a')",
+                                "JSON_TYPE does not support the 'lax'/'strict' path mode prefix "
+                                        + "(got: 'lax $.a'). Use a plain path such as '$.a.b'. To "
+                                        + "check path existence or handle invalid input, use "
+                                        + "JSON_EXISTS or IS JSON.")
+                        .testTableApiValidationError(
+                                $("f0").jsonType("strict $.a"),
+                                "JSON_TYPE does not support the 'lax'/'strict' path mode prefix "
+                                        + "(got: 'strict $.a'). Use a plain path such as '$.a.b'. "
+                                        + "To check path existence or handle invalid input, use "
+                                        + "JSON_EXISTS or IS JSON.")
+                        .testResult(
+                                $("f1").jsonType("lax"),
+                                "JSON_TYPE(f1, 'lax')",
+                                "object",
+                                STRING().nullable())
+                        .testResult(
+                                $("f1").jsonType("$[\"strict value\"]"),
+                                "JSON_TYPE(f1, '$[\"strict value\"]')",
+                                "number",
+                                STRING().nullable()),
+
+                // Only CHARACTER_STRING casts implicitly to VARCHAR, so a non-string is rejected
+                // rather than coerced. A path argument must be a literal.
+                TestSetSpec.forFunction(BuiltInFunctionDefinitions.JSON_TYPE)
+                        .onFieldsWithData(1, "{}")
+                        .andDataTypes(INT(), STRING())
+                        .testTableApiValidationError(
+                                $("f0").jsonType(),
+                                "Invalid input arguments. Expected signatures are:\n"
+                                        + "JSON_TYPE(<CHARACTER_STRING>)")
+                        .testSqlValidationError(
+                                "JSON_TYPE(f0)",
+                                "Invalid input arguments. Expected signatures are:\n"
+                                        + "JSON_TYPE(<CHARACTER_STRING>)")
+                        .testSqlValidationError("JSON_TYPE(f1, f1)", "Invalid input arguments.")
+                        .testSqlValidationError(
+                                "JSON_TYPE()",
+                                "No match found for function signature JSON_TYPE().\n"
+                                        + "Supported signatures are:\n"
+                                        + "JSON_TYPE(<CHARACTER_STRING>)"));
     }
 
     private static List<TestSetSpec> jsonQuoteSpec() {
@@ -1852,6 +2265,14 @@ class JsonFunctionsITCase extends BuiltInFunctionTestBase {
 
         try {
             return IOUtils.toString(jsonResource, Charset.defaultCharset());
+        } catch (IOException e) {
+            throw new RuntimeException(e);
+        }
+    }
+
+    private static Variant getVariantForJson(String json) {
+        try {
+            return BinaryVariantInternalBuilder.parseJson(json, false);
         } catch (IOException e) {
             throw new RuntimeException(e);
         }
